# deep-research-agent

./: README.md  agent.ipynb  agent.py  langgraph.json  prompts.py  pyproject.toml  ra.ipynb  ra.py  report.md  to_pdf.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
src/dr_agent/: __init__.py  configuration.py  graph.py  nodes.py  prompts.py  state.py
